@@ -4,3 +4,4 @@
 2024-05-13T15:11:12.409Z |            1.0.1 | fix
 2024-05-28T13:19:27.648Z |            1.0.2 | custom badge + eslint upg.
 2024-05-28T13:27:49.623Z |            1.0.3 | fix
+2024-05-28T13:43:03.111Z |            1.1.0 | badge improvement
